# resolution-simulator

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  init_x86_64.sh
cmake/: FindGBL.cmake  clang-cpp-checks.cmake
devices/: CMakeLists.txt  bttb_ex2.cc  bttb_ex3.cc  intrinsic.cc  tscope_datura.cc  tscope_datura_TBMST-sinter.cc  tscope_diamondpixel.cc  tscope_pads.cc
telescope/: assembly.cc  assembly.h  propagate.cc  propagate.h
utils/: assembly.cc  assembly.h  constants.h  log.cpp  log.h  materials.h  propagate.cc  propagate.h
