ADD_EXECUTABLE(tpad tscope_pads.cc)
TARGET_LINK_LIBRARIES(tpad ${PROJECT_NAME} ${ROOT_LIBRARIES} ${GBL_LIBRARY})

ADD_EXECUTABLE(tpix tscope_diamondpixel.cc)
TARGET_LINK_LIBRARIES(tpix ${PROJECT_NAME} ${ROOT_LIBRARIES} ${GBL_LIBRARY})

ADD_EXECUTABLE(intrinsic intrinsic.cc)
TARGET_LINK_LIBRARIES(intrinsic ${PROJECT_NAME} ${ROOT_LIBRARIES} ${GBL_LIBRARY})

ADD_EXECUTABLE(datura tscope_datura.cc)
TARGET_LINK_LIBRARIES(datura ${PROJECT_NAME} ${ROOT_LIBRARIES} ${GBL_LIBRARY})
